[gd_scene load_steps=9 format=3 uid="uid://d3icgfovg7i48"]

[ext_resource type="Texture2D" uid="uid://p3k1lba8o52b" path="res://assets/img/main_menu/flames.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://6a43ko16adp" path="res://main_menu.gd" id="1_7vrkn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")
modulate_color = Color(0.568973, 0.568973, 0.568973, 1)

[sub_resource type="FontVariation" id="FontVariation_06t4h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.666799, 0.513492, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(1, 0.788235, 0.180392, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 0.788235, 0.180392, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 1

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="Panel - Background IMG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="Label - Game Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -210.0
offset_right = 329.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_06t4h")
theme_override_font_sizes/font_size = 60
text = "THRASHER: HELL RIDE"

[node name="VBoxContainer - Menu Cont_" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -94.5
offset_right = 227.0
offset_bottom = 226.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Button - Story Mode" type="Button" parent="VBoxContainer - Menu Cont_"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Story Mode
"

[node name="Button - Survival Mode" type="Button" parent="VBoxContainer - Menu Cont_"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Survival Mode
"

[node name="Button - World Builder" type="Button" parent="VBoxContainer - Menu Cont_"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "World Builder
"

[node name="Button - High Scores" type="Button" parent="VBoxContainer - Menu Cont_"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "High Scores
"

[node name="Button - Language" type="Button" parent="VBoxContainer - Menu Cont_"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Language
"

[connection signal="pressed" from="VBoxContainer - Menu Cont_/Button - Story Mode" to="." method="story_mode_pressed"]
[connection signal="pressed" from="VBoxContainer - Menu Cont_/Button - Survival Mode" to="." method="survival_mode_pressed"]
[connection signal="pressed" from="VBoxContainer - Menu Cont_/Button - World Builder" to="." method="world_builder_pressed"]
[connection signal="pressed" from="VBoxContainer - Menu Cont_/Button - High Scores" to="." method="high_scores_pressed"]
[connection signal="pressed" from="VBoxContainer - Menu Cont_/Button - Language" to="." method="language_pressed"]
