extends Control


func story_mode_pressed() -> void:
	pass # Replace with function body.
	#get_tree().change_scene_to_file(filename-here)

func survival_mode_pressed() -> void:
	pass # Replace with function body.
	print("Survival Mode pressed")

func world_builder_pressed() -> void:
	pass # Replace with function body.
	print("Survival Mode pressed")

func high_scores_pressed() -> void:
	pass # Replace with function body.
	print("Survival Mode pressed")

func language_pressed() -> void:
	pass # Replace with function body.
	print("Survival Mode pressed")
